# skiros

./: .gitignore  README.md
skiros/: CMakeLists.txt  mainpage.dox  package.xml
skiros/launch/: skiros_skill_mgr.launch  skiros_system.launch  skiros_task_and_wm.launch  test.launch
skiros/owl/: psa_parts_codes.owl  stamina.owl
skiros/scenes/: enterprise_scene.xml  fake_scene.xml  my_world_state.xml
skiros/scripts/: install_dependencies.sh
skiros_common/: CMakeLists.txt  mainpage.dox  package.xml
skiros_common/include/skiros_common/: logger_sys.h  node_spawner.h  param.h  param_handler.h  resource_manager_interface.h  serializable_any.h  utility.h
skiros_common/src/: logger_sys.cpp  param.cpp  param_handler.cpp  serializable_any.cpp  utility.cpp
skiros_config/: CMakeLists.txt  mainpage.dox  package.xml  plugins.xml
skiros_config/include/skiros_config/: declared_uri.h  node_names.h  param_base.h  param_types.h
skiros_config/src/: param_types.cpp  standard_params.cpp
skiros_msgs/: CMakeLists.txt  mainpage.dox  package.xml
skiros_msgs/action/: Gripper.action  moveCart.action  moveJoint.action
skiros_msgs/msg/: DeviceData.msg  Finger.msg  FingerFB.msg  ModuleDescription.msg  ModuleStatus.msg  ParamMapSerialized.msg  PrimSchedulerSet.msg  PrimSchedulerStartStop.msg  PrimitiveEvent.msg  RmMonitor.msg  TmMonitor.msg  TmTaskExe.msg  WmElement.msg  WmMonitor.msg  WmObjLikelihood.msg  WmRelation.msg  WmTypeLikelihood.msg  WoNode.msg  WoStatement.msg
skiros_msgs/srv/: ModuleCommand.srv  ModulesListQuery.srv  MotionPlanningService.srv  RmDeviceHandle.srv  SetBool.srv  SkillExe.srv  TmGoal.srv  TmModifyTask.srv  TmQueryTask.srv  WmClassify.srv  WmElementGet.srv  WmElementModify.srv  WmIdentify.srv  WmQuery.srv  WmSceneLoadAndSave.srv  WmSetRelation.srv  WoModify.srv  WoQuery.srv
skiros_primitive/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml
skiros_primitive/cfg/: GripperTest.cfg
skiros_primitive/include/skiros_primitive/: definitions.h  gripper_action_client.h  primitive_base.h  primitive_composer.h
skiros_primitive/src/: primitive_base.cpp  primitive_composer.cpp  primitive_manager_node.cpp  primitive_scheduler_nodelet.cpp  test_gripper_action.cpp
skiros_resource/: CMakeLists.txt  mainpage.dox  package.xml  readme.txt
skiros_resource/include/skiros_resource/: base_arm_device.h  base_camera_device.h  base_device.h  base_gripper_device.h  definitions.h  exceptions.h  gripper_action_server.h  resource_manager.h
skiros_resource/src/: gripper_action_server.cpp  resource_manager.cpp  resource_manager_node.cpp  standalone_device_node.cpp  test_proxy.cpp  test_spawn.cpp
skiros_rqt_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
skiros_rqt_gui/include/skiros_rqt_gui/: custom_dialog_window.h  interactive_markers.h  qtree_model.h  skiros_gui.h  table_models.h
skiros_rqt_gui/src/: custom_dialog_window.cpp  qtree_model.cpp  skiros_gui.cpp  skiros_gui.ui
skiros_skill/: CMakeLists.txt  mainpage.dox  package.xml
skiros_skill/include/skiros_skill/: module_base.h  module_monitor.h  modules_interface.h  skill_base.h  skill_layer_interface.h  skill_manager.h  skill_manager_interface.h
skiros_skill/src/: module_monitor.cpp  modules_interface.cpp  skill_base.cpp  skill_layer_interface.cpp  skill_manager.cpp  skill_manager_interface.cpp  skill_manager_node.cpp
skiros_task/: CMakeLists.txt  mainpage.dox  package.xml
skiros_task/include/skiros_task/: external_interface.h  pddl.h  planner_base.h  planner_interface.h  planner_model.h  task_manager.h  type_manager.h
skiros_task/src/: pddl.cpp  planner_interface.cpp  planner_model.cpp  task_manager.cpp  task_manager_node.cpp  type_manager.cpp
skiros_world_model/: CMakeLists.txt  mainpage.dox  package.xml  plugins.xml
skiros_world_model/include/skiros_world_model/: condition.h  discrete_reasoner.h  module_core.h  module_states.h  ontology_interface.h  owl_world_model.h  owl_world_ontology.h  plugin_loading_func.h  reasoners_loading_func.h  std_uris.h  utility.h  world_element.h  world_model_interface.h
skiros_world_model/src/: condition.cpp  discrete_reasoner.cpp  element_param_plugin.cpp  module_core.cpp  owl_world_model.cpp  owl_world_model_node.cpp  owl_world_ontology.cpp  populate_node.cpp  reasoners_loading_func.cpp  std_uris.cpp  test_ontology.cpp  test_world_interface.cpp  uri_header_generator.cpp  utility.cpp  world_element.cpp  world_model_interface.cpp
