<package>
  <name>skiros</name>
  <version>0.1.0</version>
  <description>
      Implementation of the Skill Architecture for ROS from AAU
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>skiros_common</build_depend>
  <build_depend>skiros_msgs</build_depend>
  <build_depend>skiros_config</build_depend>
  <build_depend>skiros_world_model</build_depend>
  <build_depend>skiros_resource</build_depend>
  <build_depend>skiros_primitive</build_depend>
  <build_depend>skiros_skill</build_depend>
  <build_depend>skiros_task</build_depend>
  <run_depend>cmake_modules</run_depend> 

   <export>
  </export>
</package>
