<package>
  <name>skiros_common</name>
  <version>0.0.2</version>
  <description>
      Define common use class and algorithms in the skiros package
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>skiros_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>skiros_msgs</run_depend>
   <!-- <build_depend>actionlib</build_depend>
  <build_depend>skiros_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>skiros_msgs</run_depend>-->


   <export>
  </export>
</package>
