<package>
  <name>skiros_config</name>
  <version>0.0.3</version>
  <description>
      Define standard types of parameters and things
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>skiros_common</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>


   <export>
    <skiros_config plugin="${prefix}/plugins.xml"/>
  </export>
</package>
