<?xml version="1.0"?>
<package>
  <name>skiros_resource</name>
  <version>0.0.0</version>
  <description>The skiros_resource package</description>

  <maintainer email="francesco@m-tech.aau.dk">francesco</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/skiros_device</url> -->

  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>skiros_common</build_depend>
  <build_depend>skiros_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>skiros_common</run_depend>
  <run_depend>skiros_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
