<package>
  <name>skiros_skill</name>
  <version>0.1.0</version>
  <description>
      SkiROS skill layer
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author>Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>skiros_msgs</build_depend>
  <build_depend>skiros_common</build_depend>
  <build_depend>skiros_world_model</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>skiros_msgs</run_depend>
  <run_depend>skiros_common</run_depend>
  <run_depend>skiros_world_model</run_depend>


   <export>
  </export>
</package>
