<package>
  <name>skiros_task</name>
  <version>0.1.0</version>
  <description>
      SkiROS task layer
  </description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="m.crosby@ed.ac.uk">Matthew Crosby</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author email="m.crosby@ed.ac.uk"> Matthew Crosby</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>skiros_msgs</build_depend>
  <build_depend>skiros_common</build_depend>
  <build_depend>skiros_skill</build_depend>
  <build_depend>skiros_world_model</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tinyxml</build_depend>
    <!--<build_depend>universal_robotics</build_depend>-->
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>skiros_msgs</run_depend>
  <run_depend>skiros_common</run_depend>
  <run_depend>skiros_skill</run_depend>
  <run_depend>skiros_world_model</run_depend>
  <run_depend>tinyxml</run_depend>
    <!--<run_depend>universal_robotics</run_depend>-->


   <export>
  </export>
</package>
